[gd_scene load_steps=74 format=2]

[ext_resource path="res://Player anims/SwordHitbox.gd" type="Script" id=1]
[ext_resource path="res://Pause.gd" type="Script" id=2]
[ext_resource path="res://hit and hurt/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://hit and hurt/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Key Counter/key_static_v1.png" type="Texture" id=5]
[ext_resource path="res://Font/dogicapixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Player anims/playerSS.png" type="Texture" id=7]
[ext_resource path="res://Audio/hit_sound_mixdown.wav" type="AudioStream" id=8]
[ext_resource path="res://Art Assets/Full Heart.png" type="Texture" id=9]
[ext_resource path="res://Audio/463351__ddragonpearl__hit-1.wav" type="AudioStream" id=10]
[ext_resource path="res://Art Assets/money_bag.png" type="Texture" id=11]
[ext_resource path="res://Audio/250354__rucisko__gravel-steps.wav" type="AudioStream" id=12]
[ext_resource path="res://Art Assets/lighting2 (1).png" type="Texture" id=13]
[ext_resource path="res://Font/dogicapixelbold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Count3.gd" type="Script" id=15]
[ext_resource path="res://hit and hurt/Hurtbox.gd" type="Script" id=16]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=17]
[ext_resource path="res://Count.gd" type="Script" id=18]
[ext_resource path="res://Count2.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=48]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=49]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=50]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=51]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=52]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=53]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=54]
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=55]
size = 8
font_data = ExtResource( 14 )

[sub_resource type="CapsuleShape2D" id=56]
radius = 3.83072
height = 0.634399

[sub_resource type="Animation" id=57]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=58]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=59]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 19, 20 ]
}

[sub_resource type="Animation" id=60]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=61]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 11, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=62]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=63]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=64]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 5, 21, 5 ]
}

[sub_resource type="Animation" id=65]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 12, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=66]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=67]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=68]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 8, 22, 8 ]
}

[sub_resource type="Animation" id=69]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=70]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=71]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=72]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23, 24 ]
}

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "attack_down"

[sub_resource type="AnimationNodeAnimation" id=74]
animation = "right_attack"

[sub_resource type="AnimationNodeAnimation" id=75]
animation = "left_attack"

[sub_resource type="AnimationNodeAnimation" id=76]
animation = "up_attack"

[sub_resource type="AnimationNodeBlendSpace2D" id=77]
blend_point_0/node = SubResource( 73 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 74 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 75 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 76 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=78]
animation = "down_dead"

[sub_resource type="AnimationNodeAnimation" id=79]
animation = "right_dead"

[sub_resource type="AnimationNodeAnimation" id=80]
animation = "up_dead"

[sub_resource type="AnimationNodeAnimation" id=81]
animation = "left_dead"

[sub_resource type="AnimationNodeBlendSpace2D" id=82]
blend_point_0/node = SubResource( 78 )
blend_point_0/pos = Vector2( -0.00142753, 0.989446 )
blend_point_1/node = SubResource( 79 )
blend_point_1/pos = Vector2( 0.998572, -0.00263858 )
blend_point_2/node = SubResource( 80 )
blend_point_2/pos = Vector2( -0.00142753, -0.989446 )
blend_point_3/node = SubResource( 81 )
blend_point_3/pos = Vector2( -0.999286, 0.0079155 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=83]
animation = "left_idle"

[sub_resource type="AnimationNodeAnimation" id=84]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=85]
animation = "right_idle"

[sub_resource type="AnimationNodeAnimation" id=86]
animation = "up_idle"

[sub_resource type="AnimationNodeBlendSpace2D" id=87]
blend_point_0/node = SubResource( 83 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 84 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 85 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 86 )
blend_point_3/pos = Vector2( 0, -1 )
snap = Vector2( 0.01, 0.01 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=88]
animation = "down_walk"

[sub_resource type="AnimationNodeAnimation" id=89]
animation = "left_walk"

[sub_resource type="AnimationNodeAnimation" id=90]
animation = "right_walk"

[sub_resource type="AnimationNodeAnimation" id=91]
animation = "up_walk"

[sub_resource type="AnimationNodeBlendSpace2D" id=92]
blend_point_0/node = SubResource( 88 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 89 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 90 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 91 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=93]

[sub_resource type="AnimationNodeStateMachineTransition" id=94]

[sub_resource type="AnimationNodeStateMachineTransition" id=95]

[sub_resource type="AnimationNodeStateMachineTransition" id=96]

[sub_resource type="AnimationNodeStateMachineTransition" id=97]

[sub_resource type="AnimationNodeStateMachineTransition" id=98]

[sub_resource type="AnimationNodeStateMachine" id=99]
states/Attack/node = SubResource( 77 )
states/Attack/position = Vector2( 508, 204 )
states/Death/node = SubResource( 82 )
states/Death/position = Vector2( 342, 100 )
states/Idle/node = SubResource( 87 )
states/Idle/position = Vector2( 495, 100 )
states/Run/node = SubResource( 92 )
states/Run/position = Vector2( 657, 100 )
transitions = [ "Idle", "Run", SubResource( 93 ), "Run", "Idle", SubResource( 94 ), "Idle", "Attack", SubResource( 95 ), "Attack", "Idle", SubResource( 96 ), "Death", "Idle", SubResource( 97 ), "Idle", "Death", SubResource( 98 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, 26.5131 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=100]

[sub_resource type="RectangleShape2D" id=102]
extents = Vector2( 4.63716, 4.92157 )

[node name="obj_player" type="KinematicBody2D"]
position = Vector2( -123.804, 341.363 )
z_as_relative = false
collision_layer = 2
script = ExtResource( 17 )

[node name="Timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 3.31964 )
scale = Vector2( 0.40462, 0.431326 )
texture = ExtResource( 7 )
hframes = 25

[node name="UI Layer Only" type="CanvasLayer" parent="Sprite"]

[node name="Bag Icon" type="Control" parent="Sprite/UI Layer Only"]
visible = false
margin_left = 13.2823
margin_top = -0.269234
margin_right = 41.2823
margin_bottom = 9.73077
rect_scale = Vector2( 5.2, 4.52 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bag" type="Sprite" parent="Sprite/UI Layer Only/Bag Icon"]
position = Vector2( 1.8916, 4.73267 )
scale = Vector2( 0.12214, 0.119944 )
texture = ExtResource( 11 )

[node name="Label1" type="Label" parent="Sprite/UI Layer Only/Bag Icon"]
anchor_left = 0.000132113
anchor_right = 0.000132113
margin_left = 4.9963
margin_top = 3.0
margin_right = 11.9963
margin_bottom = 9.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 48 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
text = "*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count1" type="Label" parent="Sprite/UI Layer Only/Bag Icon"]
margin_left = 10.4161
margin_top = 2.54916
margin_right = 24.4161
margin_bottom = 9.54916
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 49 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
text = "00"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart Icon" type="Control" parent="Sprite/UI Layer Only"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart" type="Sprite" parent="Sprite/UI Layer Only/Heart Icon"]
position = Vector2( 22.1014, 47.9329 )
scale = Vector2( 1.51724, 1.58671 )
texture = ExtResource( 9 )

[node name="Label2" type="Label" parent="Sprite/UI Layer Only/Heart Icon"]
margin_left = 38.5061
margin_top = 29.7573
margin_right = 46.5061
margin_bottom = 43.7573
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = SubResource( 50 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
text = "*"
align = 1
valign = 1

[node name="Count2" type="Label" parent="Sprite/UI Layer Only/Heart Icon"]
margin_left = 64.6583
margin_top = 39.5697
margin_right = 92.6583
margin_bottom = 53.5697
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = SubResource( 51 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
text = "00"
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key Icon" type="Control" parent="Sprite/UI Layer Only"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key" type="Sprite" parent="Sprite/UI Layer Only/Key Icon"]
position = Vector2( 24.3758, 78.6667 )
scale = Vector2( 1, 0.75 )
texture = ExtResource( 5 )

[node name="Label3" type="Label" parent="Sprite/UI Layer Only/Key Icon"]
margin_left = 38.7109
margin_top = 70.2376
margin_right = 52.7109
margin_bottom = 84.2376
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = SubResource( 52 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
text = "*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count3" type="Label" parent="Sprite/UI Layer Only/Key Icon"]
margin_left = 64.5538
margin_top = 68.6107
margin_right = 92.5538
margin_bottom = 82.6107
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = SubResource( 53 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
text = "00"
script = ExtResource( 15 )

[node name="CanvasLayer" type="CanvasLayer" parent="Sprite"]

[node name="Pause" type="Control" parent="Sprite/CanvasLayer"]
pause_mode = 2
visible = false
margin_right = 186.0
margin_bottom = 123.0
rect_scale = Vector2( 5.52, 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorOverLay" type="ColorRect" parent="Sprite/CanvasLayer/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -61.5
margin_right = 655.0
margin_bottom = 538.5
rect_scale = Vector2( 0.24822, 0.202859 )
color = Color( 0.25098, 0.160784, 0, 0.709804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause Logo" type="Label" parent="Sprite/CanvasLayer/Pause"]
margin_left = 20.4783
margin_top = 10.8479
margin_right = 165.478
margin_bottom = 34.8479
custom_fonts/font = SubResource( 54 )
custom_colors/font_color = Color( 1, 0.854902, 0.0666667, 1 )
custom_colors/font_color_shadow = Color( 0.788235, 0.388235, 0.0666667, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = 2
text = "Pause Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="Button" parent="Sprite/CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.74
margin_top = 80.1309
margin_right = -55.26
margin_bottom = -17.8691
custom_fonts/font = SubResource( 55 )
custom_colors/font_color = Color( 0.556863, 0.556863, 0.556863, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Quit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="Sprite"]
current = true
zoom = Vector2( 0.18, 0.2 )
drag_margin_left = 0.1
drag_margin_right = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.475624, 10.4891 )
shape = SubResource( 56 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0.0219727, 5.62988 )
scale = Vector2( 0.0549075, 0.0348862 )
texture = ExtResource( 13 )
texture_scale = 4.68
color = Color( 0.988235, 1, 0.647059, 0.160784 )
energy = 4.0
shadow_enabled = true

[node name="player_anim" type="AnimationPlayer" parent="."]
anims/attack_down = SubResource( 57 )
anims/down_dead = SubResource( 58 )
anims/down_walk = SubResource( 59 )
anims/idle_down = SubResource( 60 )
anims/left_attack = SubResource( 61 )
anims/left_dead = SubResource( 62 )
anims/left_idle = SubResource( 63 )
anims/left_walk = SubResource( 64 )
anims/right_attack = SubResource( 65 )
anims/right_dead = SubResource( 66 )
anims/right_idle = SubResource( 67 )
anims/right_walk = SubResource( 68 )
anims/up_attack = SubResource( 69 )
anims/up_dead = SubResource( 70 )
anims/up_idle = SubResource( 71 )
anims/up_walk = SubResource( 72 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 99 )
anim_player = NodePath("../player_anim")
parameters/playback = SubResource( 100 )
parameters/Attack/blend_position = Vector2( -0.00193048, -0.00862074 )
parameters/Death/blend_position = Vector2( 0.239115, -0.547945 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, 5.101 )
rotation = 1.5708

[node name="SwordHitbox" type="Area2D" parent="HitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 8, 0 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.238064, 9.31003 )
shape = SubResource( 102 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.097

[node name="Hurtbox" type="Area2D" parent="." instance=ExtResource( 4 )]
collision_layer = 4
collision_mask = 0
script = ExtResource( 16 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="walking_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Sprite/CanvasLayer/Pause/QuitGame" to="Sprite/CanvasLayer/Pause" method="_on_QuitGame_pressed"]
[connection signal="area_entered" from="Hurtbox" to="Sprite/UI Layer Only/Heart Icon/Count2" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibility_ended"]
